<resources>
    <string name="app_name">SwingPro</string>
    <string name="myAccountSetting">내 계정 설정</string>
    <string name="myStatistic">내 통계 보기</string>
    <string name="myRecord">내 기록</string>
    <string name="notice">공지사항</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="measure">측정하기</string>
    <string name="setting">설정</string>
    <string name="statistic">통계</string>
    <string name="show_detail">상세보기</string>
    <string name="ms">(ms)</string>
    <string name="my_average_speed">내 평균 속도</string>
    <string name="my_fastest_speed">내 최고 속도</string>
    <string name="exitMessage">\"Back\"버튼 을 한번 더 눌러 SwingPro를 종료</string>
    <string name="test_seq">순서대로 누르기</string>
    <string name="test_tempo">박자맞춰 누르기</string>
    <string name="test_seq_desc">연결된 버튼 4개를 차례대로 빠르게 눌러줍니다.\n버튼의 위치는 팔을 쭉 뻗었을 때와 팔을 굽혔을 때의 간격으로 맞춰주세요</string>
    <string name="test_tempo_desc">1개의 버튼만을 이용하여 메트로눔의 박자에 맞춰 정확하게 버튼을 눌러주세요.\n (박자맞춰 누르기의 경우 기록이 저장되지 않습니다.)</string>
    <string name="start_with_local">로컬에서 시작</string>
    <string name="start">시작하기</string>
    <string name="login">로그인</string>
    <string name="cancel">취소</string>
    <string name="confirm">확인</string>
    <string name="key_map">Key Map</string>
    <string name="KeyMap">Key1 : 방향키 위(↑)\nKey2 : 방향키 아래(↓)\nKey3 : 방향키 좌(←)\nKey4 : 방향키 우(→)
\nKey5 : 엔터(Enter)\n\nExtension Mode (2 Swing Air)\n\nKey6 : 1\nKey7 : 2\nKey8 : 3\nKey9 : 4\nKey10 : 5</string>
    <string name="message">메시지함</string>
    <string name="personal_account">개인계정</string>
    <string name="_1_15">1회부터 15회까지의 최근 기록만 표시됩니다.</string>
    <string name="domainBase">(평균속도 / 회차)</string>
    <string name="demo_text_status">로컬버전에선 피드백 메시지가 출력되지 않습니다.</string>
    <string name="normal_setting">일반설정</string>
    <string name="auto_login">자동으로 로그인</string>
    <string name="recv_no_message">메시지 받지 않기</string>
    <string name="swingair">SwingAir</string>
    <string name="tempo_test_btn_adjust">박자맞춰 누르기 테스트 버튼 설정</string>
    <string name="privacy">개인정보</string>
    <string name="clear_data">데이터 전부 삭제</string>
    <string name="delete">삭제</string>
    <string name="goLook">보러가기</string>
    <string name="timesMeasure">측정 횟수</string>
    <string name="measureStartDate">측정 시작일</string>
    <string name="myAvgRecord">내 평균 기록</string>
    <string name="myBestRecord">내 최고 기록</string>
    <string name="mintosys">MINTOSYS</string>
    <string name="mintosys_addr">06631 서울특별시 서초구 서초대로 356 서초지웰타워 14층</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="avg">평균</string>
    <string name="ms_unit">단위(ms)</string>
    <string name="no1">1번</string>
    <string name="no2">2번</string>
    <string name="no3">3번</string>
    <string name="no4">4번</string>
    <string name="first_try">1회차</string>
    <string name="_0">0</string>
    <string name="second_try">2회차</string>
    <string name="third_try">3회차</string>
    <string name="fourth_try">4회차</string>
    <string name="of_fourth_try">/4회차</string>
    <string name="total_time_each">회차 누적 시간 :</string>
    <string name="_ms">ms</string>
    <string name="test_seq_start_message">1번 버튼을 눌러 테스트 시작</string>
    <string name="try_time">회차</string>
    <string name="total_time_per_each">회차별 누적 시간</string>
    <string name="total_time">총 누적시간</string>
</resources>
