<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_back">

    <ImageView
        android:id="@+id/titleLogo"
        android:layout_marginTop="180dp"
        android:layout_gravity="center_horizontal|top"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:background="@drawable/logo"/>

    <LinearLayout
        android:id="@+id/btnBase"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/btnLocal"
            style="@style/m_40_plainBtn"
            android:layout_marginBottom="15dp"
            android:background="@drawable/s_btn_plain_dark3"
            android:text="@string/start_with_local"/>

        <Button
            android:id="@+id/btnJoin"
            style="@style/m_40_plainBtn"
            android:layout_marginBottom="15dp"
            android:background="@drawable/s_btn_plain_dark1"
            android:text="@string/start"/>

        <Button
            android:id="@+id/btnSignIn"
            style="@style/m_40_plainBtn"
            android:layout_marginBottom="30dp"
            android:background="@drawable/s_btn_plain_dark2"
            android:text="@string/login"/>

    </LinearLayout>


</FrameLayout>